Meta data added

--- a/public/index.html
+++ b/public/index.html
@@ -7,9 +7,21 @@
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
-      content="Kyle Weber's tax and accounting services LLC"
+      content="Kyle Weber's tax and accounting services LLC. WeberTaxt&Accounting."
     />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
+    <meta name="keywords" content="tax services, accounting services, tax filing, small business accounting, personal tax, bookkeeping, tax preparation, CPA, financial planning, WeberTaxAccounting, Kyle Weber, Northern Virginia, Tax, Accounting, Weber">
+
+    <meta property="og:title" content="Weber Tax & Accounting Services LLC" />
+    <meta property="og:description" content="Professional tax and accounting services. Let Kyle Weber handle your tax and financial needs with expertise and care." />
+    <meta property="og:image" content="%PUBLIC_URL%/og-image.png" />
+    <meta property="og:url" content="https://webertaxaccounting.com" />
+    <meta property="og:type" content="website" />
+
+    <meta name="robots" content="index, follow" />
+    <link rel="canonical" href="https://webertaxaccounting.com" />
+
+
     <!--
       manifest.json provides metadata used when your web app is installed on a
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
